--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!-- css -->
-    <link rel="stylesheet" href="./homeSite.css">
     <title>clark-cui-home</title>
   </head>
   <body>
@@ -33,7 +31,7 @@
           <div class="container" style="display: flex;">
 
             <div class="card" style="width: 18rem;margin-right: 30px;">
-              <img src="./assets/covid-19.png" class="card-img-top" alt="..." style="height: 12rem; object-fit: contain;">
+              <img src="" class="card-img-top imgFirst" alt="..." style="height: 12rem; object-fit: contain;">
               <div class="card-body">
                 <h5 class="card-title">疫情地图</h5>
                 <p class="card-text">covid-2019疫情地图</p>
@@ -42,7 +40,7 @@
             </div>
 
             <div class="card" style="width: 18rem;margin-right: 30px;">
-              <img src="./assets/python.png" class="card-img-top" alt="..." style="height: 12rem; object-fit: contain;">
+              <img src="" class="card-img-top imgSecond" alt="..." style="height: 12rem; object-fit: contain;">
               <div class="card-body">
                 <h5 class="card-title">python玩具</h5>
                 <p class="card-text">一些小玩具</p>
@@ -63,5 +61,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!-- 引入js -->
+    <script src="./index.bundle.js"></script>
   </body>
 </html>
