add github actions

--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,15 @@
 				<h5>github</h5>
 				<img src="" alt="github" title="github" id="github" />
 			</a>
-			<a class="tab tabSecond" href="https://blog.clark-cui.top/">
+			<a class="tab tabSecond" href="http://blog.clark-cui.top/">
 				<h5>blog</h5>
 				<img src="" alt="blog" title="blog" id="blog" />
 			</a>
-			<a class="tab tabThird" href="https://note.clark-cui.top/">
+			<a class="tab tabThird" href="http://note.clark-cui.top/">
 				<h5>note</h5>
 				<img src="" alt="note" title="note" id="note" />
 			</a>
-			<a class="tab tabFourth" href="https://box.clark-cui.top/">
+			<a class="tab tabFourth" href="http://box.clark-cui.top/">
 				<h5>box</h5>
 				<img src="" alt="box" title="box" id="box" />
 			</a>
